add range support & about page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src='https://cdn.jsdelivr.net/npm/js-sha1@0.6.0/build/sha1.min.js'></script>
 	<p><h1 style='color: #ffffff;'>anime-crawler 網頁版本</h1></p>
 	<a href='https://github.com/stevenhuang226/anime-crawler-webPage' style='color: #33ffff;'>github連結</a>
+	<a href='/about.html' style='color: #33ffff;'>關於這個網頁</a>
 	<form id='anime_search' action='javascript:void(0);' >
 		<input type='text' id='anime-search-input' name='search' autofocus placeholder='輸入關鍵字'>
 		<input type='submit' value='搜尋' class='theButton'>
