fix range response header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</form>
 	<div class="videoPlayerDiv mainPlayer">
 		<button onclick="closePlayer()" id='mainPlayerCloseButton' class="mainPlayer theButton">關閉播放器</button>
-		<video class="videoPlayer mainPlayer" id='main-player' controls='controls'>
+		<video class="videoPlayer mainPlayer" id='main-player' controls>
 			<source src='' type='video/mp4'>
 		</video>
 	</div>
